# jaccard.py

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: requirements.txt  test.yml
jaccard/: __init__.py
tests/: test_doctest.py
